# ChocoFactory

./: Cargo.toml
.agents/ChokoFactory/: 00-rough-idea.md  01-idea.md  03-design.md  04-plan.md  05-execution-plan.md
.agents/SOP/: SpecDrivenDev.md
.github/workflows/: ci.yml  claude-review.yml
choco/: Cargo.toml
choco/src/: main.rs
chokofactory-core/: Cargo.toml
chokofactory-core/src/: lib.rs  models.rs
chokofactoryd/: Cargo.toml
chokofactoryd/migrations/: 0001_init.sql
chokofactoryd/src/: capture.rs  engine.rs  lib.rs  main.rs  retention.rs  session.rs  workflow_def.rs
chokofactoryd/src/adapter/: claude.rs  mod.rs
chokofactoryd/src/db/: events.rs  mod.rs  pool.rs  projects.rs  task_runs.rs  tasks.rs  workflow_state.rs
chokofactoryd/tests/fixtures/: fake_claude.py  fake_claude_crash.py  fake_claude_oneshot.py
