[workspace]
resolver = "2"
members = [
    "chokofactoryd",
    "choco",
    "chokofactory-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chokofactory-core = { path = "chokofactory-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "json",
    "migrate",
    "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
